--- a/5_React/React-practice/01-sample/package.json
+++ b/5_React/React-practice/01-sample/package.json
@@ -8,7 +8,11 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.8",
+    "blob-util": "^2.0.2",
     "bootstrap": "^5.3.3",
+    "parchment": "^3.0.0",
+    "quill-image-resize": "^3.0.9",
+    "quill-image-resize-module-react": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
