--- a/5_React/React-practice/01-sample/package.json
+++ b/5_React/React-practice/01-sample/package.json
@@ -13,6 +13,7 @@
     "parchment": "^3.0.0",
     "quill-image-resize": "^3.0.9",
     "quill-image-resize-module-react": "^3.0.0",
+    "quill-image-uploader": "^1.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
